<?xml version="1.0"?>
<package format="2">

  <name>gym_social</name>
  <version>0.1.0</version>
  <description>gym_social</description>
  <author>me</author>
  <maintainer email="me@email.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <!-- <build_depend>gym</build_depend> -->

  <build_export_depend>rospy</build_export_depend>
  <!-- <build_export_depend>gym</build_export_depend> -->

  <exec_depend>rospy</exec_depend>
  <!-- <exec_depend>gym</exec_depend> -->

  <export>
    <architecture_independent />
  </export>

</package>
